--- a/nativescript-angular/package.json
+++ b/nativescript-angular/package.json
@@ -42,9 +42,9 @@
   "devDependencies": {
     "@angular/compiler-cli": "4.0.0-beta.8",
     "codelyzer": "~2.0.0",
-    "tns-core-modules": "2.5.0",
+    "tns-core-modules": "internal-preview",
     "tslint": "~4.4.0",
-    "typescript": "~2.1.0",
+    "typescript": "~2.2.0",
     "zone.js": "^0.7.2"
   },
   "nativescript": {}
