--- a/nativescript-angular/package.json
+++ b/nativescript-angular/package.json
@@ -32,7 +32,7 @@
     "@angular/platform-browser": "~2.4.3",
     "@angular/forms": "~2.4.3",
     "@angular/router": "~3.4.3",
-    "rxjs": "~5.0.1",
+    "rxjs": "^5.0.1",
     "reflect-metadata": "~0.1.8",
     "punycode": "1.3.2",
     "querystring": "0.2.0",
