--- a/ng-sample/package.json
+++ b/ng-sample/package.json
@@ -33,7 +33,7 @@
     "@angular/platform-browser-dynamic": "~2.4.3",
     "@angular/router": "~3.4.3",
     "nativescript-angular": "file:../nativescript-angular",
-    "rxjs": "~5.0.1"
+    "rxjs": "^5.0.1"
   },
   "devDependencies": {
     "zone.js": "~0.7.2",
